--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,6 @@
 <resources>
-      <dimen name="fab_margin">16dp</dimen>
+      <dimen name="short_space">4dp</dimen>
+      <dimen name="medium_space">8dp</dimen>
+      <dimen name="like_font">10dp</dimen>
+      <dimen name="like_size">36dp</dimen>
    </resources>
