--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,5 +2,6 @@
       <dimen name="short_space">4dp</dimen>
       <dimen name="medium_space">8dp</dimen>
       <dimen name="like_font">10dp</dimen>
+      <dimen name="status_bar">30dp</dimen>
       <dimen name="like_size">36dp</dimen>
    </resources>
